spectec/test/elab/neg/relation-missing-rules.spectec
;; A relation declared but with no rules — should produce a warning,
;; not an error. Confirms the harness handles warnings.

syntax foo = `FOO

relation Foo_ok: |- foo
